<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".MainActivity"
    >

    <item android:id="@+id/favoritos"
        android:title="@string/favoritos"
        android:icon="@drawable/ic_starcinco"
        app:showAsAction="ifRoom"
        android:orderInCategory="1"
        />
    <item
        android:id="@+id/mContacto"
        android:title="@string/mcontacto"
        android:orderInCategory="2"
        app:showAsAction="never"
        />
    <item
        android:id="@+id/mAcercade"
        android:title="@string/macercade"
        android:orderInCategory="3"
        app:showAsAction="never"
        />

    <item android:id="@+id/salir"
        android:title="@string/salir"
        android:icon="@drawable/ic_salir"
        app:showAsAction="never"
        android:orderInCategory="4"
        />

</menu>